--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -45,7 +45,7 @@
                 android:ellipsize="end"
                 android:inputType="textCapSentences"
                 android:imeOptions="actionNext"
-                style="@style/Theme.PassionWoman.EditText"
+                style="@style/Widget.PassionWoman.EditText"
                 tools:text="@tools:sample/first_names" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +65,7 @@
                 android:ellipsize="end"
                 android:inputType="textCapSentences"
                 android:imeOptions="actionDone"
-                style="@style/Theme.PassionWoman.EditText"
+                style="@style/Widget.PassionWoman.EditText"
                 tools:text="@tools:sample/last_names" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +77,7 @@
             android:layout_marginHorizontal="@dimen/margin_default"
             android:text="@string/edit_profile_done"
             app:layout_constraintTop_toBottomOf="@id/inputSurnameWrapper"
-            style="@style/Theme.PassionWoman.Button.Colored"/>
+            style="@style/Widget.PassionWoman.Button.Colored"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvAuthor"
