--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -19,47 +19,85 @@
         app:tv_actionEndVisible="true"
         app:tv_actionStartSrc="@drawable/ic_back" />
 
-    <LinearLayout
-        android:id="@+id/layoutActions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_default"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/btnFilters"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="@dimen/margin_default"
-            android:padding="@dimen/margin_small"
-            android:tint="@color/text"
-            android:src="@drawable/ic_filters"
-            android:background="@drawable/bg_card" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/btnSorting"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginStart="@dimen/margin_default"
-            android:paddingVertical="@dimen/margin_small"
-            android:paddingHorizontal="@dimen/margin_default"
-            android:background="@drawable/bg_card"
-            tools:text="@tools:sample/lorem"/>
-    </LinearLayout>
-
-    <ru.babaetskv.passionwoman.app.presentation.view.GridRecyclerView
-        android:id="@+id/rvProducts"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="@dimen/margin_small"
-        android:clipToPadding="false"
-        android:layoutAnimation="@anim/layout_grid_fade_in_delayed"
-        app:layout_constraintTop_toBottomOf="@id/layoutActions"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
-        tools:listitem="@layout/view_item_product"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layoutActions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_default"
+                    app:layout_collapseMode="none">
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/btnFilters"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="@dimen/margin_default"
+                        android:padding="@dimen/margin_small"
+                        android:tint="@color/text"
+                        android:src="@drawable/ic_filters"
+                        android:background="@drawable/bg_card"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvFiltersCount"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_card"
+                        android:backgroundTint="@color/secondaryVariant"
+                        android:textSize="12sp"
+                        android:textColor="@color/onSecondary"
+                        android:translationX="10dp"
+                        android:visibility="gone"
+                        app:layout_constraintTop_toTopOf="@id/btnFilters"
+                        app:layout_constraintEnd_toEndOf="@id/btnFilters"
+                        tools:visibility="visible"
+                        tools:text="42"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/btnSorting"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="@dimen/margin_default"
+                        android:paddingVertical="@dimen/margin_small"
+                        android:paddingHorizontal="@dimen/margin_default"
+                        android:background="@drawable/bg_card"
+                        app:drawableTint="@color/text"
+                        android:drawablePadding="@dimen/margin_small"
+                        android:drawableStart="@drawable/ic_sorting"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/btnFilters"
+                        tools:text="@tools:sample/lorem"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <ru.babaetskv.passionwoman.app.presentation.view.GridRecyclerView
+            android:id="@+id/rvProducts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/margin_small"
+            android:clipToPadding="false"
+            android:layoutAnimation="@anim/layout_grid_fade_in_delayed"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            tools:listitem="@layout/view_item_product"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <ru.babaetskv.passionwoman.app.presentation.view.StubView
         android:id="@id/errorView"
