--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,7 +47,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/profile_log_out"
                 android:textColor="@color/error"
-                style="@style/Theme.PassionWoman.Button.Text"/>
+                style="@style/Widget.PassionWoman.Button.Text"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </FrameLayout>
