--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -99,6 +99,6 @@
             android:text="@string/item_product_button_buy"
             app:layout_constraintTop_toBottomOf="@id/ratingBar"
             app:layout_constraintStart_toStartOf="parent"
-            style="@style/Theme.PassionWoman.Button.Text"/>
+            style="@style/Widget.PassionWoman.Button.Text"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
