--- a/app/src/main/res/layout/view_item_product_size.xml
+++ b/app/src/main/res/layout/view_item_product_size.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
+<androidx.appcompat.widget.AppCompatToggleButton
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvSize"
+    android:id="@+id/btnSize"
     android:layout_width="48dp"
     android:layout_height="48dp"
-    android:background="@drawable/bg_product_size"
-    android:textColor="@color/item_size_color_selector"
     android:padding="0dp"
     android:textSize="14sp"
-    android:gravity="center"
     android:enabled="false"
     tools:text="XXXL" />
