--- a/app/src/main/res/layout/view_stub.xml
+++ b/app/src/main/res/layout/view_stub.xml
@@ -26,15 +26,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_default"
         android:textAlignment="center"
         android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/ivBanner"
         app:layout_constraintBottom_toTopOf="@id/btnAction"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:text="@tools:sample/lorem/random"
         tools:lines="2"/>
 
@@ -47,6 +46,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        style="@style/Theme.PassionWoman.Button.Colored"
+        style="@style/Widget.PassionWoman.Button.Colored"
         tools:text="@tools:sample/lorem"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
