--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,94 +17,20 @@
         <item name="android:windowTranslucentNavigation">true</item>
 
         <item name="android:windowBackground">@color/background</item>
-        <item name="android:textViewStyle">@style/Theme.PassionWoman.TextView</item>
-        <item name="imageButtonStyle">@style/Theme.PassionWoman.ImageButton</item>
-        <item name="cardViewStyle">@style/Theme.PassionWoman.CardView</item>
-        <item name="editTextStyle">@style/Theme.PassionWoman.EditText</item>
-        <item name="textInputStyle">@style/Theme.PassionWoman.TextInput</item>
-        <item name="coloredButtonStyle">@style/Theme.PassionWoman.Button.Colored</item>
-        <item name="textButtonStyle">@style/Theme.PassionWoman.Button.Text</item>
-        <item name="outlineButtonStyle">@style/Theme.PassionWoman.Button.Outline</item>
-        <item name="switchStyle">@style/Theme.PassionWoman.Switch</item>
-        <item name="radioButtonStyle">@style/Theme.PassionWoman.RadioButton</item>
-        <item name="ratingBarStyle">@style/Theme.PassionWoman.RatingBar</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextView" parent="Widget.MaterialComponents.TextView">
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance</item>
-    </style>
-
-    <style name="Theme.PassionWoman.CardView" parent="Widget.MaterialComponents.CardView">
-        <item name="cardCornerRadius">@dimen/corners_default</item>
-        <item name="android:foreground">?android:attr/selectableItemBackgroundBorderless</item>
-        <item name="android:clickable">true</item>
-        <item name="cardBackgroundColor">@color/primaryVariant</item>
-    </style>
-
-    <style name="Theme.PassionWoman.ImageButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:tint">@color/onPrimary</item>
-    </style>
-    
-    <style name="Theme.PassionWoman.Button.Colored" parent="Widget.MaterialComponents.Button">
-        <item name="android:backgroundTint">@color/button_color_selector</item>
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
-        <item name="android:padding">@dimen/margin_small</item>
-        <item name="cornerRadius">@dimen/corners_default</item>
-        <item name="android:textColor">@color/onSecondary</item>
-    </style>
-
-    <style
-        name="Theme.PassionWoman.Button.Outline"
-        parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
-        <item name="android:padding">@dimen/margin_small</item>
-        <item name="cornerRadius">@dimen/corners_default</item>
-        <item name="strokeColor">@color/button_color_selector</item>
-        <item name="strokeWidth">2dp</item>
-        <item name="android:textColor">@color/button_color_selector</item>
-    </style>
-
-    <style
-        name="Theme.PassionWoman.Button.Text"
-        parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
-        <item name="android:textColor">@color/button_color_selector</item>
-        <item name="android:padding">@dimen/margin_small</item>
-    </style>
-
-    <style name="Theme.PassionWoman.EditText" parent="Widget.AppCompat.EditText">
-        <item name="android:padding">@dimen/margin_small</item>
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:textCursorDrawable">@null</item>
-        <item name="android:textColor">@color/onPrimary</item>
-        <item name="android:textColorHint">@color/hint</item>
-        <item name="android:fontFamily">@font/lora_italic</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style
-        name="Theme.PassionWoman.TextInput"
-        parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:background">@drawable/bg_input</item>
-        <item name="hintTextColor">@color/hint</item>
-        <item name="android:textColorHint">@color/text_input_label_color</item>
-    </style>
-
-    <style name="Theme.PassionWoman.Switch" parent="Widget.AppCompat.CompoundButton.Switch">
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance</item>
-        <item name="android:textColor">@color/onPrimary</item>
-        <item name="track">@drawable/switch_track</item>
-        <item name="android:thumb">@drawable/switch_thumb</item>
-    </style>
-
-    <style name="Theme.PassionWoman.RadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance</item>
-        <item name="android:textColor">@color/onPrimary</item>
-        <item name="android:button">@drawable/radio_button</item>
-        <item name="android:paddingStart">@dimen/margin_small</item>
-        <item name="android:paddingTop">@dimen/margin_small</item>
-        <item name="android:paddingBottom">@dimen/margin_small</item>
+        <item name="android:textViewStyle">@style/Widget.PassionWoman.TextView</item>
+        <item name="imageButtonStyle">@style/Widget.PassionWoman.ImageButton</item>
+        <item name="cardViewStyle">@style/Widget.PassionWoman.CardView</item>
+        <item name="editTextStyle">@style/Widget.PassionWoman.EditText</item>
+        <item name="textInputStyle">@style/Widget.PassionWoman.TextInput</item>
+        <item name="coloredButtonStyle">@style/Widget.PassionWoman.Button.Colored</item>
+        <item name="textButtonStyle">@style/Widget.PassionWoman.Button.Text</item>
+        <item name="outlineButtonStyle">@style/Widget.PassionWoman.Button.Outline</item>
+        <item name="switchStyle">@style/Widget.PassionWoman.Switch</item>
+        <item name="radioButtonStyle">@style/Widget.PassionWoman.RadioButton</item>
+        <item name="ratingBarStyle">@style/Widget.PassionWoman.RatingBar</item>
+        <item name="checkboxStyle">@style/Widget.PassionWoman.CheckBox</item>
+        <item name="android:buttonStyleToggle">@style/Widget.PassionWoman.ToggleButton</item>
+        <item name="sliderStyle">@style/Widget.PassionWoman.Slider</item>
     </style>
 
     <style name="Theme.PassionWoman.BottomSheetDialogFragment" parent="Theme.MaterialComponents.Light.Dialog">
@@ -113,12 +39,27 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/primaryVariant</item>
         <item name="android:windowAnimationStyle">@style/Animation.PassionWoman.BottomSheetDialog</item>
-        <item name="radioButtonStyle">@style/Theme.PassionWoman.RadioButton</item>
-    </style>
 
-    <style name="Theme.PassionWoman.RatingBar" parent="Widget.AppCompat.RatingBar.Small">
-        <item name="android:stepSize">0.1</item>
-        <item name="android:progressTint">@color/secondary</item>
-        <item name="android:progressBackgroundTint">@color/hint</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primaryVariant</item>
+        <item name="colorOnPrimary">@color/onPrimary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondaryVariant">@color/secondaryVariant</item>
+        <item name="colorOnSecondary">@color/onSecondary</item>
+
+        <item name="android:textViewStyle">@style/Widget.PassionWoman.TextView</item>
+        <item name="imageButtonStyle">@style/Widget.PassionWoman.ImageButton</item>
+        <item name="cardViewStyle">@style/Widget.PassionWoman.CardView</item>
+        <item name="editTextStyle">@style/Widget.PassionWoman.EditText</item>
+        <item name="textInputStyle">@style/Widget.PassionWoman.TextInput</item>
+        <item name="coloredButtonStyle">@style/Widget.PassionWoman.Button.Colored</item>
+        <item name="textButtonStyle">@style/Widget.PassionWoman.Button.Text</item>
+        <item name="outlineButtonStyle">@style/Widget.PassionWoman.Button.Outline</item>
+        <item name="switchStyle">@style/Widget.PassionWoman.Switch</item>
+        <item name="radioButtonStyle">@style/Widget.PassionWoman.RadioButton</item>
+        <item name="ratingBarStyle">@style/Widget.PassionWoman.RatingBar</item>
+        <item name="checkboxStyle">@style/Widget.PassionWoman.CheckBox</item>
+        <item name="android:buttonStyleToggle">@style/Widget.PassionWoman.ToggleButton</item>
+        <item name="sliderStyle">@style/Widget.PassionWoman.Slider</item>
     </style>
 </resources>
