--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -41,14 +41,13 @@
         app:sv_action="@string/retry"
         app:sv_isBackVisible="false" />
 
-    <ru.babaetskv.passionwoman.app.presentation.view.LinearMockView
+    <include
         android:id="@id/mockView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:lmv_margin="@dimen/margin_default"
-        app:lmv_itemView="@layout/view_item_category_mock"
+        layout="@layout/layout_categories_mock"
         tools:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
