--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -71,12 +71,13 @@
         app:sv_action="@string/retry"
         app:sv_isBackVisible="false" />
 
-    <ru.babaetskv.passionwoman.app.presentation.view.ProgressView
-        android:id="@id/progressView"
+    <include
+        android:id="@id/mockView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/layoutActions"
         app:layout_constraintBottom_toBottomOf="parent"
+        layout="@layout/layout_product_list_mock"
         tools:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
