--- a/app/src/demo/res/layout/activity_demo_presets.xml
+++ b/app/src/demo/res/layout/activity_demo_presets.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,16 +9,19 @@
     tools:context=".presentation.feature.demopresets.DemoPresetsActivity">
 
     <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:textAlignment="viewStart"
         app:tv_title="@string/demo_presets_title"
-        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"/>
+        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -64,4 +67,4 @@
             android:visibility="gone"
             tools:visibility="visible"/>
     </FrameLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
