--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -97,6 +97,15 @@
             app:spanCount="2"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             tools:listitem="@layout/view_item_product"/>
+
+        <include
+            android:id="@id/mockView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            layout="@layout/layout_product_list_mock"
+            tools:visibility="visible"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <ru.babaetskv.passionwoman.app.presentation.view.StubView
@@ -108,14 +117,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:sv_action="@string/retry"
         app:sv_isBackVisible="false" />
-
-    <include
-        android:id="@id/mockView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/layoutActions"
-        app:layout_constraintBottom_toBottomOf="parent"
-        layout="@layout/layout_product_list_mock"
-        tools:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
